:bug: Fixed columns spacing

--- a/styles/collectionStyle.scss
+++ b/styles/collectionStyle.scss
@@ -191,6 +191,7 @@ a {
     vertical-align: middle;
     width: 100%;
     transition: .5s ease-in-out;
+    height: 40vh;
 }
 
 .overlay {
@@ -478,7 +479,7 @@ a {
     }
 
     .outer-div {
-        margin-top: 2.5px;
+        margin-top: 2px;
     }
 }
 
